Sat Dec 20 00:44:47 CET 2003  Patrik Weiskircher <pat@icore.at>

	* fixed a bug in the whois using attributes function where no 
	  error was sent if no nickname and client id but the attributes were
	  given to whois. Affected file silcd/server_query.c

Tue Dec 16 21:34:59 CET 2003  Patrik Weiskircher <pat@icore.at>

	* remove public key from public key hashtable on detach. Affected
	  file silcd/packet_receive.c

	* free public key hashtable before removing clients on server
	  shutdown. Affected file silcd/server.c

	* remove public key prior deleting client-data on killing a client.
	  Affected file silcd/server_util.c

Sat Dec 06 21:35:14 CET 2003  Patrik Weiskircher <pat@icore.at>

	* Getting the MOTD from other servers works now. Affected
	  files are silcd/command.c and silcd/command_reply.c

Thu Dec 04 11:33:46 CET 2003  Jochen Eisinger <jochen@penguin-breeder.org>

	* Initialize the variable idletag, since it is tested in 
	  silc_core_deinit for its default value.  Affected file
	  irssi/src/silc/core/silc-core.c

Sun Nov 30 19:47:02 CET 2003  Patrik Weiskircher <pat@icore.at>

	* Fixed signed channel messages across cells. Affected file
	  silcd/packet_send.c

Fri Nov 28 19:13:21 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Changed the SILC_LOG_* macros to not be empty if SILC_DEBUG
	  is not defined.  They can now be safely used in if-statements
	  without braces.  Affected file lib/silcutil/silclog.h.

	* Added the checks for backup closing connection due to error
	  (local or remote) and thus not allow the resuming to occur
	  in reconnect.  Affected files are silcd/packet_send.c
	  and server.c.

Tue Nov 25 15:20:59 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Help file updates.  Affected files in irssi/src/docs/help/in/.

Wed Nov 23 20:51:21 CET 2003  Patrik Weiskircher <pat@icore.at>

	* Fixed channel messages across cells. Affected file
	  silcd/packet_send.c

Wed Nov 12 11:34:56 EET 2003  Pekka Riikonen <priikone@silcnet.org>
